# xTrek

./: .gitignore  IntersectGUI.py  README.txt  README_TASKS.md  SSCC_Utils.py  SendDocument.ps1  agg_rep_sscc_replace.py  aggrep_to_message_xlsx.py  api_curl_ps.txt  auhdata_sample.json  config_loader.py  create_emission_task_sample.py  create_test_eqrep.py  create_token.bat  create_token.ps1  crpt_auth.py  cryptoProCsp.txt  database.json  feed-product.txt  gen_report_individual.py  gs1_processor.py  gs1_processor_example.py  gs1prefix_inn_db.json  install.py  jsontoxlsx.py  kinGenerator.py  kin_info.py  kiz_from_rep.py  nk.py  nk_api.bat  nk_api.lnk  nk_api.py  nkapi.py  org_manager.py  ping.ps1  pyproject.toml  rd-info-by-gtin.ps1  rd-info-by-gtin.txt  readcsv.py  requirements.txt  (+18 more)
amica/: amica_generator.py
my_orgs/: 550e8400-e29b-41d4-a716-446655440000.json  9a0626e3-2026-4177-9f91-0d0884c9609e.json  c9876543-e21b-77d3-b123-998877665544.json
tests/: test_aggregation.py  test_auto_discovery.py  test_create_emission_task.py  test_create_equipment_task.py  test_create_virtual_tasks.py  test_cyrillic_fix.py  test_equipment_set_report_from_report.py  test_get_kodes.py  test_gs1_processor.py  test_honest_sign.py  test_introduce.py  test_introduce_permits.py  test_kin_generator.py  test_set_ready_check.py  test_suz_api_models.py  test_suz_new_methods.py  test_token_logic_fix.py  test_tokens_new.py  test_utils.py  test_virtual_introduce.py  test_virtual_utilisation.py
xtrek/: SSCC_Utils.py  config_loader.py  converter.py  create_emission_task_sample.py  crpt_auth.py  nk.py  (+17 more)
(+19 files in other folders)
